Fix header overlapping

--- a/public/app.css
+++ b/public/app.css
@@ -6,12 +6,26 @@
   margin-left: 0 !important;
 }
 
+header {
+  min-height: 71px;
+  margin: 50px 0 30px 0;
+}
+
 header h1 {
   padding: 0;
-  margin: 50px 0 30px 0;
+  margin: 0;
+  display: inline-block;
+  vertical-align: middle;
   text-transform: uppercase;
   font-size: 60px;
   font-family: 'Oswald', sans-serif;
+}
+
+@media (max-width: 480px) {
+  header h1 {
+    padding-top: 10px;
+    font-size: 40px;
+  }
 }
 
 header h1 a, header h1 a:hover{
